4.7
-----------------
Update GPLtools to use new netlogging destinations.


4.6
-----------------
Update DQM trending to use absolute value of rocking angle.


4.5
-----------------
Accept rhel6 hosts.
Tweak queues.


4.4.1
-----------------
Upgrading to Common-06-12


4.4
-----------------
Do not create SVAC tuples
Change procver to 202 for all exported file types
New GR GlastRelease-17-35-24-lp61
New ST ScienceTools-09-32-05 
New DiffRsp, new ft2Utils, new fitsGen for P202
add ability to ignore some deliveries when merging [LONE-190@JIRA]
Don't clean up chunks until we're really done [LONE-193@JIRA]
Improve retry handling [LONE-194@JIRA]


4.3
-----------------
GR-17-35-24-lp40(?), which was built against B3-1-3


4.2
-----------------
This is for P202-FT2 reprocessing, don't use for L1.


4.1
-----------------
FSW B3-1-0


4.0
-----------------
RHEL5, gcc4.1


3.5
-----------------
New packages required to prepare for the leap second on Jun 30, 2012.


3.4
-----------------
GR-17-35-24-lp28, which was built against FSW B3-0-0-gl1.


3.3
-----------------
Add BTI stuff.
Retry when testing file existence (needs a new GPLTools) and notify log wathcher if it takes more than 1 try.
Make scripts and expressions in XML use the new API.
Optionally ignore some deliveries when merging.


3.2
-----------------
New GR, new ROOT version, new Common


3.1
-----------------
Skipped version for P130 reprocessing


3.0
-----------------
Using the SCons-based GR
Compiling the datamon stuff with SCons
Getting rid of cmt everywhere
Checking out fitsGen to explicitly set ft2.tpl


2.12
-----------------
New monitoring tags for normalized rates and fastMonHist


2.11
-----------------
Moving mergeSvacChunks to cleanupCompleteRun
Moving the tkr monitoring modules to cleanupCompleteRun


2.10
-----------------
First step at putting back normalized rates


2.9
-----------------
Version for PASS7_V6
adding electronMerit, electronFT1, extendedFT1, extendedLS1